visibility type (ft. bugs)

--- a/frontend/src/app/components/chat/chat.component.less
+++ b/frontend/src/app/components/chat/chat.component.less
@@ -80,4 +80,17 @@
         display: inline-block;
         vertical-align: middle;
     }
+    
+    .selected {
+        font-weight: 500;
+        background-color: rgba(0, 0, 0, 0.04);
+    }
+    
+    mat-menu {
+        min-width: 180px;
+    }
+    
+    mat-icon[matprefix] {
+        margin-right: 8px;
+    }
 }
