--- a/frontend/src/app/pages/chat-page/chat-page.component.less
+++ b/frontend/src/app/pages/chat-page/chat-page.component.less
@@ -38,14 +38,6 @@
             margin-right: 8px;
             color: white;
             display: inline-block;
-            
-            &.group {
-                background-color: #3f51b5; // Mat primary color
-            }
-            
-            &.public {
-                background-color: #4caf50; // Mat success color
-            }
         }
     
         .active {
